<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_title_notifications">
        <CheckBoxPreference
            android:title="@string/pref_show_notifications"
            android:defaultValue="true"
            android:key="notifications_enabled" />
        <CheckBoxPreference
            android:dependency="notifications_enabled"
            android:title="@string/pref_sound_on_complete"
            android:defaultValue="false"
            android:key="notifications_play_sound" />
        <CheckBoxPreference
            android:dependency="notifications_enabled"
            android:title="@string/pref_vibrate_on_complete"
            android:defaultValue="false"
            android:key="notifications_vibrate" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_uploads">
        <CheckBoxPreference
            android:title="@string/pref_multi_upload"
            android:defaultValue="true"
            android:key="uploads_allow_multiple"/>
    </PreferenceCategory>

</PreferenceScreen>